force-app/main/default/objects/Column__c/Column__c.object-meta.xml
<CustomObject>
    <label>Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>