force-app/main/default/objects/Column__c/fields/CheckValue__c.field-meta.xml
<CustomField>
    <fullName>CheckValue__c</fullName>
    <formula>IF(TIMEVALUE( CreatedDate ) - TIMEVALUE( Table__r.CreatedDate )  &gt;= 600000,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Column Created After Table?</label>
    <type>Checkbox</type>
</CustomField>