force-app/main/default/objects/Column__c/fields/Column_Id__c.field-meta.xml
<CustomField>
    <fullName>Column_Id__c</fullName>
    <externalId>true</externalId>
    <label>Column Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>