force-app/main/default/objects/Column__c/fields/Term_Count__c.field-meta.xml
<CustomField>
    <fullName>Term_Count__c</fullName>
    <label>Term Count</label>
    <summaryForeignKey>Term_Column__c.Column__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>